muffy-rnc/src/snapshots/muffy_rnc__parse__tests__schema__svg11__svg11-basic.rnc.snap
---
source: muffy-rnc/src/parse.rs
expression: parse_schema(&read_to_string(&path).unwrap()).unwrap()
---
Schema {
    declarations: [
        Namespace(
            NamespaceDeclaration {
                prefix: Identifier {
                    component: "a",
                    sub_components: [],
                },
                uri: "http://relaxng.org/ns/compatibility/annotations/1.0",
            },
        ),
        Namespace(
            NamespaceDeclaration {
                prefix: Identifier {
                    component: "svg",
                    sub_components: [],
                },
                uri: "http://www.w3.org/2000/svg",
            },
        ),
        Namespace(
            NamespaceDeclaration {
                prefix: Identifier {
                    component: "xlink",
                    sub_components: [],
                },
                uri: "http://www.w3.org/1999/xlink",
            },
        ),
    ],
    body: Pattern(
        Grammar(
            Grammar {
                contents: [
                    Include(
                        Include {
                            uri: "svg11-basic-inc.rnc",
                            inherit: Some(
                                Inherit {
                                    prefix: Identifier {
                                        component: "svg",
                                        sub_components: [],
                                    },
                                },
                            ),
                            grammar: None,
                        },
                    ),
                    Start {
                        combine: None,
                        pattern: Name(
                            Name {
                                prefix: None,
                                local: Identifier {
                                    component: "svg",
                                    sub_components: [],
                                },
                            },
                        ),
                    },
                ],
            },
        ),
    ),
}
