muffy-rnc/src/snapshots/muffy_rnc__parse__tests__schema__svg11__svg11-inc.rnc.snap
---
source: muffy-rnc/src/parse.rs
expression: parse_schema(&read_to_string(&path).unwrap()).unwrap()
---
Schema {
    declarations: [
        Namespace(
            NamespaceDeclaration {
                prefix: Identifier {
                    component: "a",
                    sub_components: [],
                },
                uri: "http://relaxng.org/ns/compatibility/annotations/1.0",
            },
        ),
        Namespace(
            NamespaceDeclaration {
                prefix: Identifier {
                    component: "svg",
                    sub_components: [],
                },
                uri: "http://www.w3.org/2000/svg",
            },
        ),
        Namespace(
            NamespaceDeclaration {
                prefix: Identifier {
                    component: "xlink",
                    sub_components: [],
                },
                uri: "http://www.w3.org/1999/xlink",
            },
        ),
    ],
    body: Pattern(
        Grammar(
            Grammar {
                contents: [
                    Include(
                        Include {
                            uri: "svg-container-attrib.rnc",
                            inherit: Some(
                                Inherit {
                                    prefix: Identifier {
                                        component: "svg",
                                        sub_components: [],
                                    },
                                },
                            ),
                            grammar: None,
                        },
                    ),
                    Include(
                        Include {
                            uri: "svg-viewport-attrib.rnc",
                            inherit: Some(
                                Inherit {
                                    prefix: Identifier {
                                        component: "svg",
                                        sub_components: [],
                                    },
                                },
                            ),
                            grammar: None,
                        },
                    ),
                    Include(
                        Include {
                            uri: "svg-paint-attrib.rnc",
                            inherit: Some(
                                Inherit {
                                    prefix: Identifier {
                                        component: "svg",
                                        sub_components: [],
                                    },
                                },
                            ),
                            grammar: None,
                        },
                    ),
                    Include(
                        Include {
                            uri: "svg-opacity-attrib.rnc",
                            inherit: Some(
                                Inherit {
                                    prefix: Identifier {
                                        component: "svg",
                                        sub_components: [],
                                    },
                                },
                            ),
                            grammar: None,
                        },
                    ),
                    Include(
                        Include {
                            uri: "svg-graphics-attrib.rnc",
                            inherit: Some(
                                Inherit {
                                    prefix: Identifier {
                                        component: "svg",
                                        sub_components: [],
                                    },
                                },
                            ),
                            grammar: None,
                        },
                    ),
                    Include(
                        Include {
                            uri: "svg-docevents-attrib.rnc",
                            inherit: Some(
                                Inherit {
                                    prefix: Identifier {
                                        component: "svg",
                                        sub_components: [],
                                    },
                                },
                            ),
                            grammar: None,
                        },
                    ),
                    Include(
                        Include {
                            uri: "svg-graphevents-attrib.rnc",
                            inherit: Some(
                                Inherit {
                                    prefix: Identifier {
                                        component: "svg",
                                        sub_components: [],
                                    },
                                },
                            ),
                            grammar: None,
                        },
                    ),
                    Include(
                        Include {
                            uri: "svg-animevents-attrib.rnc",
                            inherit: Some(
                                Inherit {
                                    prefix: Identifier {
                                        component: "svg",
                                        sub_components: [],
                                    },
                                },
                            ),
                            grammar: None,
                        },
                    ),
                    Include(
                        Include {
                            uri: "svg-xlink-attrib.rnc",
                            inherit: Some(
                                Inherit {
                                    prefix: Identifier {
                                        component: "svg",
                                        sub_components: [],
                                    },
                                },
                            ),
                            grammar: None,
                        },
                    ),
                    Include(
                        Include {
                            uri: "svg-extresources-attrib.rnc",
                            inherit: Some(
                                Inherit {
                                    prefix: Identifier {
                                        component: "svg",
                                        sub_components: [],
                                    },
                                },
                            ),
                            grammar: None,
                        },
                    ),
                    Include(
                        Include {
                            uri: "svg-structure.rnc",
                            inherit: Some(
                                Inherit {
                                    prefix: Identifier {
                                        component: "svg",
                                        sub_components: [],
                                    },
                                },
                            ),
                            grammar: None,
                        },
                    ),
                    Include(
                        Include {
                            uri: "svg-conditional.rnc",
                            inherit: Some(
                                Inherit {
                                    prefix: Identifier {
                                        component: "svg",
                                        sub_components: [],
                                    },
                                },
                            ),
                            grammar: None,
                        },
                    ),
                    Include(
                        Include {
                            uri: "svg-image.rnc",
                            inherit: Some(
                                Inherit {
                                    prefix: Identifier {
                                        component: "svg",
                                        sub_components: [],
                                    },
                                },
                            ),
                            grammar: None,
                        },
                    ),
                    Include(
                        Include {
                            uri: "svg-style.rnc",
                            inherit: Some(
                                Inherit {
                                    prefix: Identifier {
                                        component: "svg",
                                        sub_components: [],
                                    },
                                },
                            ),
                            grammar: None,
                        },
                    ),
                    Include(
                        Include {
                            uri: "svg-shape.rnc",
                            inherit: Some(
                                Inherit {
                                    prefix: Identifier {
                                        component: "svg",
                                        sub_components: [],
                                    },
                                },
                            ),
                            grammar: None,
                        },
                    ),
                    Include(
                        Include {
                            uri: "svg-text.rnc",
                            inherit: Some(
                                Inherit {
                                    prefix: Identifier {
                                        component: "svg",
                                        sub_components: [],
                                    },
                                },
                            ),
                            grammar: None,
                        },
                    ),
                    Include(
                        Include {
                            uri: "svg-marker.rnc",
                            inherit: Some(
                                Inherit {
                                    prefix: Identifier {
                                        component: "svg",
                                        sub_components: [],
                                    },
                                },
                            ),
                            grammar: None,
                        },
                    ),
                    Include(
                        Include {
                            uri: "svg-profile.rnc",
                            inherit: Some(
                                Inherit {
                                    prefix: Identifier {
                                        component: "svg",
                                        sub_components: [],
                                    },
                                },
                            ),
                            grammar: None,
                        },
                    ),
                    Include(
                        Include {
                            uri: "svg-gradient.rnc",
                            inherit: Some(
                                Inherit {
                                    prefix: Identifier {
                                        component: "svg",
                                        sub_components: [],
                                    },
                                },
                            ),
                            grammar: None,
                        },
                    ),
                    Include(
                        Include {
                            uri: "svg-pattern.rnc",
                            inherit: Some(
                                Inherit {
                                    prefix: Identifier {
                                        component: "svg",
                                        sub_components: [],
                                    },
                                },
                            ),
                            grammar: None,
                        },
                    ),
                    Include(
                        Include {
                            uri: "svg-clip.rnc",
                            inherit: Some(
                                Inherit {
                                    prefix: Identifier {
                                        component: "svg",
                                        sub_components: [],
                                    },
                                },
                            ),
                            grammar: None,
                        },
                    ),
                    Include(
                        Include {
                            uri: "svg-mask.rnc",
                            inherit: Some(
                                Inherit {
                                    prefix: Identifier {
                                        component: "svg",
                                        sub_components: [],
                                    },
                                },
                            ),
                            grammar: None,
                        },
                    ),
                    Include(
                        Include {
                            uri: "svg-filter.rnc",
                            inherit: Some(
                                Inherit {
                                    prefix: Identifier {
                                        component: "svg",
                                        sub_components: [],
                                    },
                                },
                            ),
                            grammar: None,
                        },
                    ),
                    Include(
                        Include {
                            uri: "svg-cursor.rnc",
                            inherit: Some(
                                Inherit {
                                    prefix: Identifier {
                                        component: "svg",
                                        sub_components: [],
                                    },
                                },
                            ),
                            grammar: None,
                        },
                    ),
                    Include(
                        Include {
                            uri: "svg-hyperlink.rnc",
                            inherit: Some(
                                Inherit {
                                    prefix: Identifier {
                                        component: "svg",
                                        sub_components: [],
                                    },
                                },
                            ),
                            grammar: None,
                        },
                    ),
                    Include(
                        Include {
                            uri: "svg-view.rnc",
                            inherit: Some(
                                Inherit {
                                    prefix: Identifier {
                                        component: "svg",
                                        sub_components: [],
                                    },
                                },
                            ),
                            grammar: None,
                        },
                    ),
                    Include(
                        Include {
                            uri: "svg-script.rnc",
                            inherit: Some(
                                Inherit {
                                    prefix: Identifier {
                                        component: "svg",
                                        sub_components: [],
                                    },
                                },
                            ),
                            grammar: None,
                        },
                    ),
                    Include(
                        Include {
                            uri: "svg-animation.rnc",
                            inherit: Some(
                                Inherit {
                                    prefix: Identifier {
                                        component: "svg",
                                        sub_components: [],
                                    },
                                },
                            ),
                            grammar: None,
                        },
                    ),
                    Include(
                        Include {
                            uri: "svg-font.rnc",
                            inherit: Some(
                                Inherit {
                                    prefix: Identifier {
                                        component: "svg",
                                        sub_components: [],
                                    },
                                },
                            ),
                            grammar: None,
                        },
                    ),
                    Include(
                        Include {
                            uri: "svg-extensibility.rnc",
                            inherit: Some(
                                Inherit {
                                    prefix: Identifier {
                                        component: "svg",
                                        sub_components: [],
                                    },
                                },
                            ),
                            grammar: None,
                        },
                    ),
                ],
            },
        ),
    ),
}
